# enclave

./: AGENTS.md  Cargo.toml  EVAL_KEY_MPC_DESIGN.md  README.md  pnpm-lock.yaml  rust-toolchain.toml
circuits/lib/src/configs/: mod.nr
circuits/lib/src/configs/committee/: large.nr  medium.nr  mod.nr
circuits/lib/src/configs/default/: mod.nr
circuits/lib/src/configs/insecure/: dkg.nr  threshold.nr
circuits/lib/src/configs/secure/: dkg.nr  threshold.nr
circuits/lib/src/core/dkg/: pk.nr  share_computation.nr  share_decryption.nr  share_encryption.nr
circuits/lib/src/core/threshold/: decrypted_shares_aggregation.nr  eval_key_galois_share.nr  eval_key_relin_round1_share.nr  eval_key_relin_round2_share.nr  mod.nr  pk_aggregation.nr  pk_generation.nr  share_decryption.nr  user_data_encryption_ct0.nr  user_data_encryption_ct1.nr
circuits/lib/src/math/: commitments.nr  helpers.nr  mod.nr  polynomial.nr  poseidon2_commitment.nr  safe.nr
crates/events/src/enclave_event/: eval_key_crs_distributed.rs  eval_key_share_proof_pending.rs  eval_key_share_proof_signed.rs  evaluation_key_created.rs  galois_key_share_created.rs  mod.rs  proof.rs  relin_key_share_round1_created.rs  relin_key_share_round2_created.rs  relinearization_key_created.rs  share_verification.rs  signed_proof.rs
crates/events/src/enclave_event/compute_request/: mod.rs  zk.rs
crates/events/src/enclave_event/publish_document/: mod.rs
crates/fhe-params/: Cargo.toml
crates/fhe-params/src/: crp.rs  lib.rs
crates/keyshare/: Cargo.toml
crates/keyshare/src/: galois_key_share_collector.rs  lib.rs  relin_key_share_round1_collector.rs  relin_key_share_round2_collector.rs  threshold_keyshare.rs
crates/multithread/src/: multithread.rs
crates/net/src/: document_publisher.rs
crates/net/tests/: Dockerfile
crates/tests/tests/: integration.rs
crates/trbfv/: Cargo.toml
crates/trbfv/src/: distributed_eval_key.rs  lib.rs  trbfv_request.rs
crates/zk-helpers/: Cargo.toml
crates/zk-helpers/src/: ciphernodes_committee.rs  utils.rs
crates/zk-helpers/src/circuits/: commitments.rs
crates/zk-helpers/src/circuits/dkg/share_computation/: utils.rs
crates/zk-helpers/src/circuits/threshold/: mod.rs
crates/zk-helpers/src/circuits/threshold/eval_key_galois_share/: circuit.rs  codegen.rs  computation.rs  sample.rs
crates/zk-helpers/src/circuits/threshold/eval_key_relin_round1_share/: circuit.rs  codegen.rs  computation.rs  sample.rs
crates/zk-helpers/src/circuits/threshold/eval_key_relin_round2_share/: circuit.rs  codegen.rs  computation.rs  mod.rs  sample.rs
crates/zk-prover/: Cargo.toml  versions.json
crates/zk-prover/src/: config.rs  prover.rs  witness.rs
crates/zk-prover/src/actors/: proof_request.rs  share_verification.rs
crates/zk-prover/src/backend/: download.rs
crates/zk-prover/src/circuits/recursive_aggregation/: mod.rs  vk.rs
crates/zk-prover/src/circuits/threshold/: eval_key_galois_share.rs  eval_key_relin_round1_share.rs  eval_key_relin_round2_share.rs  mod.rs
crates/zk-prover/tests/: local_e2e_tests.rs  onchain_verification_tests.rs  witness_tests.rs
examples/auction-bitplane/: .gitignore  AGENTS.md  Cargo.toml  EVAL_KEY_MPC_DESIGN.md  README.md
examples/auction-bitplane/benches/: bench.rs
examples/auction-bitplane/client/src/components/: AuctionResult.tsx  SubmitBid.tsx
examples/auction-bitplane/client/src/hooks/: useAuction.ts
examples/auction-bitplane/server/: Cargo.toml
examples/auction-bitplane/server/src/: auction.rs  config.rs  main.rs  routes.rs
examples/auction-bitplane/server/tests/: integration.rs
examples/auction-bitplane/src/: lib.rs  main_sealed.rs
examples/auction-bitplane/wasm/: Cargo.toml
examples/auction-bitplane/wasm/src/: lib.rs
examples/batch-auction-fba/: Cargo.toml  DESIGN.md  README.md
examples/batch-auction-fba/src/: lib.rs
examples/batch-auction-uniform/: Cargo.toml  DESIGN.md  README.md
examples/batch-auction-uniform/src/: lib.rs
examples/batch-exchange/: Cargo.toml  DESIGN.md  README.md
examples/batch-exchange/src/: lib.rs
examples/combinatorial-auction/: Cargo.toml  DESIGN.md  README.md
examples/combinatorial-auction/src/: lib.rs
examples/token-sale/: Cargo.toml  DESIGN.md  README.md
examples/token-sale/src/: lib.rs
examples/uniswap-cca/: Cargo.toml  DESIGN.md  README.md
examples/uniswap-cca/src/: lib.rs
examples/uniswap-v4-hook/: Cargo.toml  DESIGN.md
examples/uniswap-v4-hook/src/: lib.rs
tests/integration/: enclave.config.yaml  test.sh
