[workspace]

[package]
name = "auction_bitplane_example"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
description = "Discrete-ladder Vickrey auction demo using progressive threshold BFV decryption"

[dependencies]
e3-fhe-params = { path = "../../crates/fhe-params", features = ["abi-encoding"] }
e3-trbfv = { path = "../../crates/trbfv" }
e3-utils = { path = "../../crates/utils" }
fhe = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-math = { git = "https://github.com/gnosisguild/fhe.rs" }
ndarray = "0.15"
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
