[workspace]

[package]
name = "batch_auction_fba_example"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
description = "Frequent batch auction demo using BFV SIMD cumulative demand encoding"

[dependencies]
auction_bitplane_example = { path = "../auction-bitplane" }
batch_auction_uniform_example = { path = "../batch-auction-uniform" }
fhe = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-math = { git = "https://github.com/gnosisguild/fhe.rs" }
ndarray = "0.15"
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
