[workspace]

[package]
name = "combinatorial_auction_example"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
description = "Standalone fair combinatorial auction demo using threshold BFV"

[dependencies]
auction_bitplane_example = { path = "../auction-bitplane" }
fhe = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs" }
rand = "0.8"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
