[workspace]

[package]
name = "uniswap_cca_example"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
description = "Sealed-bid CCA demo using BFV SIMD cumulative demand encoding (N=8192)"

[dependencies]
auction_bitplane_example = { path = "../auction-bitplane" }
fhe = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-math = { git = "https://github.com/gnosisguild/fhe.rs" }
ndarray = "0.15"
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
