[workspace]

[package]
name = "uniswap_v4_hook_example"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
description = "Encrypted batch settlement demo using BFV SIMD two-sided demand encoding (N=8192)"

[dependencies]
auction_bitplane_example = { path = "../auction-bitplane" }
uniswap_cca_example = { path = "../uniswap-cca" }
fhe = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs" }
fhe-math = { git = "https://github.com/gnosisguild/fhe.rs" }
ndarray = "0.15"
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
